@@ -2,6 +2,11 @@ Changes between nazghul-0.1.2 and nazghul-0.1.3
 
 gmcnutt:
 
+--Bugfix: field effects never worked outside of combat. Added support for
+  them. Also modified the main game loop so that the player cannot give
+  commands until somebody in the party is not asleep. If everyone is sleeping
+  then the player has to wait until at least one party member wakes up.
+
 --Bugfix: chests created via the load file (as opposed to chests created as
   corpse loot) were causing a seg fault when the player tried to open them. The
   problem is that they were being created as generic Objects, and not as
